Commutatus Assignment/force-app/main/default/objects/Account/fields/Profile_Completed__c.field-meta.xml
<CustomField>
    <fullName>Profile_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once the User fills the details then we can set the field to checked</description>
    <label>Profile Completed</label>
    <type>Checkbox</type>
</CustomField>