Commutatus Assignment/force-app/main/default/objects/Account/fields/T_Shirt_Size__c.field-meta.xml
<CustomField>
    <fullName>T_Shirt_Size__c</fullName>
    <description>The t-shirt sizes are: XS, S, M, L, XL, XXL</description>
    <label>T Shirt Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XS</fullName>
                <default>true</default>
                <label>XS</label>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>XXL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>