Commutatus Assignment/force-app/main/default/objects/Account/validationRules/Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Phone, &quot;^\\d{10}$&quot;))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Your Phone number does not match with 10-digit US/Canadian numbers.</errorMessage>
</ValidationRule>